# Naive-SysY-Simulator

./: .gitignore  Cargo.toml  README.md  report.md
src/: ast_df.rs  main.rs  riscv_codegen.rs  sysy.lalrpop
src/codegen/: array.rs  asm.rs  build.rs  env.rs  generate.rs  instruction.rs  label.rs  mod.rs  table.rs  valuegen.rs
src/graph_shell/: utils.rs
src/irgen/: array.rs  builtin.rs  env.rs  eval.rs  generate.rs  loopstack.rs  mod.rs  opt.rs  scope.rs
src/shell/: mod.rs
src/simulator/: cpu.rs  decode.rs  elf.rs  gui.rs  instruction.rs  mem.rs  mod.rs  pipe.rs
testcase/: ackermann.c  add.c  div.c  quicksort.c
testcase/c/: hello.c  if-else.c  load-store.c  matrix-mul.c  shift.c
testcase/elf/: exp.elf
testcase/koopa/: hello.koopa
testcase/riscv/: exp.s  hello.koopa  hello.s
