[package]
name = "Naive-SysY-Simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
lalrpop-util = { version = "0.20.2", features = ["lexer"] }
koopa = "0.0.8"
rand = "0.8.5"
object = "0.32"
colored = "2.0"
crossterm = "0.25"
eframe = "0.13"
tokio = { version = "1", features = ["full"] }
egui = "0.18"

[build-dependencies]
lalrpop = "0.20.2"

